Removing hacky scrollbar fix

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,6 +5,6 @@
   /* margin-bottom: 10px !important; */
 }
 
-/* div.ReactVirtualized__Grid__innerScrollContainer > div {
+div.ReactVirtualized__Grid__innerScrollContainer > div {
   width: 420px !important;
-} */
+}
